[package]
name = "flux-limiter"
version = "0.2.0"
edition = "2024"
authors = ["Jeffery D. Mitchell", "<crusty-rustacean@gmail.com>"]
description = "A rate limiter based on the Generic Cell Rate Algorithm (GCRA)."
license = "MIT"
repository = "https://github.com/crustyrustacean/flux-limiter"
keywords = ["rate limiting", "GCRA", "algorithm", "throttling"]
categories = ["network-programming", "algorithms"]
readme = "README.md"
publish = false

[features]
default = []
testing = []

[dependencies]
dashmap = "6.1.0"
